syntax = "proto3";

package dto;

enum Role { ADMIN = 0; TRACKER = 1; LEARNER = 2; }

message TeamShort {
  string id = 1;
  int32 number = 2;
}

message ProfileResponse {
  string fullName = 1;
  Role role = 2;
  string email = 3;
  string phone = 4;
  string messenger = 5;
  int32 balance = 6;  
  TeamShort team = 7;
}

message AccountGetResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  string lastName = 4;
  string email = 5;
  string phone = 6;
  string messenger = 7;
  Role role = 8;
}

message AccountCreateRequest {
  string name = 1;
  string surname = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  string messenger = 6;
  Role role = 7;
  string password = 8;
}

message AccountEditRequest {
  string name = 1;
  string surname = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  string messenger = 6;
}

message AccountChangeSuccessResponse {
  string id = 1;
}

message AccountChangeErrorResponse {
  bool email = 1;
  bool phone = 2;
}

message AccountListElem {
  string id = 1;
  string partName = 2;
  string email = 3;
  TeamShort teamShort = 4;
  Role role = 5;
  int32 balance = 6;
}

message AccountListResponse {
  int32 totalElems = 1;
  repeated AccountListElem accountList = 2;
}

message AccountShortListElem {
  string id = 1;
  string partName = 2;
}

message AccountShortListResponse {
  repeated AccountShortListElem accountShortList = 1;
}

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string id = 1;
  Role role = 2;
}

message NameAndBalanceResponse {
  string name = 1;
  int32 balance = 2;
}

// Enum для статуса лота
enum LotStatus {
  APPROVAL = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}

// Основная структура лота
message LotResponse {
  string id = 1; // Уникальный идентификатор лота
  string number = 2; // Номер лота
  string title = 3; // Название лота
  string description = 4; // Описание лота
  string terms = 5; // Условия лота
  double price = 6; // Цена лота
  LotStatus status = 7; // Статус лота
  AccountShortListElem performer = 8; // Исполнитель лота
  string date = 9; // Дата лота
}

message LotShort {
  string id = 1; // Уникальный идентификатор лота
  string number = 2; // Номер лота
  string title = 3; // Название лота
  string performer = 4; // Исполнитель лота
  double price = 5; // Цена лота
}

// Сообщение, содержащее список лотов
message LotsShortResponse {
  int32 totalLotsNumber = 1; // Общее количество лотов
  repeated LotShort lots = 2; // Массив лотов
}

enum BuyLotClaimStatus {
  WAITING = 0;
  APPROVED = 1;
  DENIED = 2;
}

message ClaimBuyLotResponse {
  string id = 1;
  BuyLotClaimStatus status = 2;
  AccountShortListElem buyer = 3;
  LotResponse lot = 4;
  string date = 5;
}

message ClaimBuyLotRequest {
  string buyerId = 1;
  string lotId = 2;
}

message ClaimBuyLotListElem {
  string id = 1;
  string lotNumber = 2;
  string buyer = 3;
  string date = 4;
  BuyLotClaimStatus status = 5;
  int32 price = 6;
}

message ClaimBuyLotListResponse {
  int32 totalElems = 1;
  repeated ClaimBuyLotListElem claimBuyLotList = 2;
}

message ClaimBuyLotListRequest {
  int32 page = 1;
  int32 pageSize = 2;
}